Updating the plugin files by creating a new plugin with same name and filters with pluginMaker and copying the plugin files over....recommended by Joey K.

--- a/Resources/DDDAnalysisToolbox.qrc
+++ b/Resources/DDDAnalysisToolbox.qrc
@@ -1,6 +1,7 @@
  <!DOCTYPE RCC>
  <RCC version="1.0">
  <qresource>
+ <file>DDDAnalysisToolbox/DDDAnalysisToolboxLicense.txt</file>
  <file>DDDAnalysisToolbox/DDDAnalysisToolboxDescription.txt</file>
  </qresource>
  </RCC>
